--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
+    "prettier-plugin-svelte": "^2.6.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
