--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^10.4.4",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
-    "prettier-plugin-svelte": "^2.6.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
