--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "client:build": "vite build",
     "client:dev": "vite",
     "server:build": "tsc --project tsconfig.server.json",
-    "server:dev": "ts-node --esm --transpile-only --project tsconfig.server.json src/server/server.ts"
+    "server:dev": "ts-node --esm --transpile-only --project tsconfig.server.json src/server/server.ts",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@testing-library/svelte": "^3.1.1",
     "@tsconfig/svelte": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^10.4.4",
+    "c8": "^7.11.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
@@ -31,6 +35,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
+    "jsdom": "^19.0.0",
     "node-fetch": "^3.2.3",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
@@ -41,7 +46,8 @@
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vitest": "^0.9.3"
   },
   "dependencies": {
     "daisyui": "^2.13.6",
