--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "daisyui": "^2.13.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "plausible-tracker": "^0.3.5",
     "svelte-inline-svg": "^1.1.2"
   }
 }
