ci: configure project to use kamal for deployments

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,5 @@
 VITE_TENOR_API=<value>
 VITE_CURRENTS_API=<value>
 NODE_ENV=local
-
-VITE_PLAUSIBLE_DOMAIN=<value>
-VITE_PLAUSIBLE_APIHOST=<value>
+KAMAL_REGISTRY_USERNAME=<value>
+KAMAL_REGISTRY_PASSWORD=<value>
