--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "client:build": "vite build",
     "client:dev": "vite",
     "server:build": "tsc --project tsconfig.server.json",
-    "server:dev": "ts-node --esm --transpile-only --project tsconfig.server.json src/server/server.ts",
+    "server:dev": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/server/server.ts",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@testing-library/svelte": "^3.1.1",
-    "@tsconfig/svelte": "^2.0.1",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@testing-library/svelte": "^4.1.0",
+    "@tsconfig/svelte": "^5.0.4",
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.23",
+    "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^10.4.4",
@@ -38,21 +38,20 @@
     "jsdom": "^19.0.0",
     "node-fetch": "^3.2.3",
     "postcss": "^8.4.12",
-    "prettier": "2.6.2",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.9.8",
+    "prettier": "^3.2.5",
+    "svelte": "^4.2.14",
+    "svelte-check": "^3.6.9",
+    "svelte-preprocess": "^5.1.3",
     "tailwindcss": "^3.0.23",
-    "ts-node": "^10.7.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.0",
-    "vitest": "^0.9.3"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.9",
+    "vitest": "^1.5.0"
   },
   "dependencies": {
     "daisyui": "^2.13.6",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "svelte-inline-svg": "^1.1.2"
+    "express": "^4.17.3"
   }
 }
